# packaging_tutorial

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish-to-test-pypi.yml
src/example_package_xsw/: example.py
