[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "example_package_xsw"
version = "0.0.1"
authors = [
  { name="zhanglaiya", email="315396460@qq.com" },
]
description = "A small example package"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/zhanglaiya/packaging_tutorial"
"Bug Tracker" = "https://github.com/zhanglaiya/packaging_tutorial/issues"